# Snake2

./: CMakeLists.txt  main.cpp
src/: snake.cpp  snake.hpp  timer.hpp
src/client/: app.cpp  app.hpp  game.cpp  game.hpp  menu.cpp  menu.hpp  ui.hpp  visuals.cpp  visuals.hpp
